@@ -116,6 +116,7 @@ Bugs Bunny's Birthday Ball LG-2 (German)
 Cue Ball Wizard (older display rev.)
 Diner LG-2 (German)
 Dracula (One Ball MOD)
+Elvira and the Party Monsters LG-3 (German) (incomplete dump)
 Elvis 1.00
 Farfalla (French Speech)
 Flipper Football 1.03
